@@ -345,17 +345,15 @@ function opt = mpoption(varargin)
 %       minopf.mult_price       0 (30)      multiple price
 %
 %   MOSEK:
-%       mosek.lp_alg            0           solution algorithm for LP problems
+%       mosek.lp_alg            0           solution algorithm
 %                                               (MSK_IPAR_OPTIMIZER)
-%           for MOSEK 7.x ...        (see MOSEK_SYMBCON for a "better way")
+%           for MOSEK 8.x ...        (see MOSEK_SYMBCON for a "better way")
 %           [   0 - automatic: let MOSEK choose                             ]
-%           [   1 - interior point                                          ]
-%           [   3 - primal simplex                                          ]
-%           [   4 - dual simplex                                            ]
-%           [   5 - primal dual simplex                                     ]
-%           [   6 - automatic simplex (MOSEK chooses which simplex method)  ]
-%           [   7 - network primal simplex                                  ]
-%           [   10 - concurrent                                             ]
+%           [   1 - dual simplex                                            ]
+%           [   2 - automatic: let MOSEK choose                             ]
+%           [   3 - automatic simplex (MOSEK chooses which simplex method)  ]
+%           [   4 - interior point                                          ]
+%           [   6 - primal simplex                                          ]
 %       mosek.max_it            0 (400)     interior point max iterations
 %                                               (MSK_IPAR_INTPNT_MAX_ITERATIONS)
 %       mosek.gap_tol           0 (1e-8)    interior point relative gap tol
