@@ -167,9 +167,6 @@ if ~isempty(p.opt) && isfield(p.opt, 'mosek_opt') && ~isempty(p.opt.mosek_opt)
 else
     mosek_opt = mosek_options;
 end
-if qp
-    mosek_opt.MSK_IPAR_OPTIMIZER = 0;   %% default solver only for QP
-end
 
 %% set up problem struct for MOSEK
 prob.c = p.c;
@@ -209,7 +206,7 @@ end
 if verbose
     s = have_fcn('mosek', 'all');
     if s.vnum < 7
-        methods = {
+        alg_names = {           %% version 6.x
             'default',              %%  0 : MSK_OPTIMIZER_FREE
             'interior point',       %%  1 : MSK_OPTIMIZER_INTPNT
             '<conic>',              %%  2 : MSK_OPTIMIZER_CONIC
@@ -222,8 +219,8 @@ if verbose
             '<nonconvex>',          %%  9 : MSK_OPTIMIZER_NONCONVEX
             'concurrent'            %% 10 : MSK_OPTIMIZER_CONCURRENT
         };
-    else
-        methods = {
+    elseif s.vnum < 8
+        alg_names = {           %% version 7.x
             'default',              %%  0 : MSK_OPTIMIZER_FREE
             'interior point',       %%  1 : MSK_OPTIMIZER_INTPNT
             '<conic>',              %%  2 : MSK_OPTIMIZER_CONIC
@@ -237,6 +234,16 @@ if verbose
             'concurrent',           %% 10 : MSK_OPTIMIZER_CONCURRENT
             '<nonconvex>'           %% 11 : MSK_OPTIMIZER_NONCONVEX
         };
+    else
+        alg_names = {           %% version 8.x
+            '<conic>',              %%  0 : MSK_OPTIMIZER_CONIC
+            'dual simplex',         %%  1 : MSK_OPTIMIZER_DUAL_SIMPLEX
+            'default',              %%  2 : MSK_OPTIMIZER_FREE
+            'automatic simplex',    %%  3 : MSK_OPTIMIZER_FREE_SIMPLEX
+            'interior point',       %%  4 : MSK_OPTIMIZER_INTPNT
+            '<mixed int>',          %%  5 : MSK_OPTIMIZER_MIXED_INT
+            'primal simplex'        %%  6 : MSK_OPTIMIZER_PRIMAL_SIMPLEX
+        };
     end
     if qp
         lpqp = 'QP';
@@ -248,7 +255,7 @@ if verbose
         vn = '<unknown>';
     end
     fprintf('MOSEK Version %s -- %s %s solver\n', ...
-            vn, methods{mosek_opt.MSK_IPAR_OPTIMIZER+1}, lpqp);
+            vn, alg_names{mosek_opt.MSK_IPAR_OPTIMIZER+1}, lpqp);
 end
 cmd = sprintf('minimize echo(%d)', verbose);
 [r, res] = mosekopt(cmd, prob, mosek_opt);
